add new .env file

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,6 +15,8 @@
     <br>
       <div class="container">
         <div class="container">
+          <%- include("partials/flash.ejs")  %>
+          <h3>Customer Registration</h3>
           <form action="/insertuser" method="post">
             <label for="username">Name:</label>
             <input type="text" name="username" /><br /><br />
@@ -30,6 +32,9 @@
 
             <label for="password">Password:</label>
             <input type="password" name="password" /><br /><br />
+
+            <label for="password">Confirm Password:</label>
+            <input type="password" name="confirm_password" /><br /><br />
 
             <input type="submit" value="Register" class="btn btn-primary"/>
 
