--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -22,7 +22,7 @@
     <main>
       <%- include("partials/flash.ejs") %> <% if (cartCount === 0){%>
       <div class="container center-align">
-        <h1>You cart is empty!</h1>
+        <h1>Your shopping cart is empty!</h1>
         <div class="checkout_continue">
           <a
             href="/"
@@ -99,7 +99,7 @@
               <i class="material-icons right"> shopping_basket</i>
             </a>
           </div>
-        </div>
+        </div><br><br>
         
         <% }%>
 
