--- a/views/partials/user_navbar1.ejs
+++ b/views/partials/user_navbar1.ejs
@@ -1,5 +1,6 @@
 <!-- first Nav Bar -->
 
+
 <!-- Dropdown Structure -->
 <ul id="dropdown1" class="dropdown-content">
   <li><a href="#">Drinks</a></li>
@@ -9,56 +10,58 @@
   <li><a href="#!">Vegetables</a></li>
 </ul>
 <div class="navbar-fixed">
-  <nav>
-    <div class="nav-wrapper">
-      <a href="/" class="brand-logo left"
-        ><img
-          style="height: 56px; object-fit: contain; padding-top: 5px"
-          src="../public/images/demo-text-logo-design-icon-600nw-1765746851.webp"
-          alt=""
-      /></a>
 
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger right"
-        ><i class="material-icons">menu</i></a
-      >
-      <ul class="right hide-on-med-and-down">
-        <li>
-          <a
-            href="/"
-            class="tooltipped"
-            data-position="bottom"
-            data-tooltip="Home"
-            ><i class="material-icons right">home</i></a
-          >
-        </li>
-        <li>
-          <a
-            class="dropdown-trigger"
-            href="/view_products"
-            data-target="dropdown1"
-            >Products<i class="material-icons right">arrow_drop_down</i></a
-          >
-        </li>
-        <li><a href="/contact">Contact</a></li>
-        <li><a href="/register">Register</a></li>
-        <li><a href="/login">Login</a></li>
-        <li>
-     
-          <a href="/cart" class="cart"
-            ><i class="material-icons">shopping_cart</i
-            ><sup class="sup">(<%= cartCount  %>)</sup></a
-          >
-         
-        </li>
-        <li><a href="#" class="">$<%= totalPrice.toFixed(2) %></a></li>
-      </ul>
-    </div>
-  </nav>
-  <ul class="sidenav" id="mobile-demo">
-    <li><a href="/view_products" class="blue-text">Products</a></li>
-    <li><a href="/contact">Contact</a></li>
-    <li><a href="/login">Login</a></li>
-    <li><a href="/register">Register</a></li>
-    <li><a href="/logout">Logout</a></li>
-  </ul>
+<nav >
+  <div class="nav-wrapper ">
+    <a href="/" class="brand-logo left"><img style="height: 56px; object-fit: contain; padding-top: 5px;" src="../public/images/demo-text-logo-design-icon-600nw-1765746851.webp" alt=""></a> 
+
+    <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="material-icons">menu</i></a>
+    <ul class="right hide-on-med-and-down">
+      <li>  
+        <form action="/view_products" method="GET">
+        <div class="center row ">
+           <div class="col s12 ">
+             <div class="row" id="topbarsearch">
+              
+               </div>
+             </div>
+           </div>  
+          </form>  
+       </li>
+      <li><a href="/" class="tooltipped" data-position="bottom" data-tooltip="Home"><i class="material-icons right">home</i></a></li>
+      <li><a class="dropdown-trigger" href="/view_products" data-target="dropdown1">Products<i class="material-icons right">arrow_drop_down</i></a></li>
+      <li><a  href="/contact">Contact</a></li>
+      <li><a href="/register">Register</a></li>
+
+
+  
+      
+      <li><a href="/cart"><i class="material-icons">shopping_cart</i><sup class="sup">(<%= cartCount  %>)</sup></a></li>
+      <li><a href="#" class="">$<%= totalPrice.toFixed(2) %></a></li>
+      <% if( username) {%>
+        <li><a href="/logout">Logout</a></li>
+       
+          <li> <div class="chip tooltipped" data-tooltip="Welcome  <%= username %>" >
+            <img src="../../public/uploads/banana.webp" alt="Contact Person">
+            Welcome  <%= username %>
+          </div></li>
+
+     <% }else{%>
+      <li><a href="/login">login</a></li>
+  
+        <li> <div class="chip tooltipped" data-tooltip="Welcome Guest" >
+          <img src="../../public/uploads/account_circle.svg" alt="Contact Person">
+          Welcome Guest
+        </div></li>
+      <%}%>
+    </ul>
+  </div>
+</nav>
+<ul class="sidenav" id="mobile-demo">
+  <li><a href="/view_products" class="blue-text">Products</a></li>
+  <li><a href="/contact">Contact</a></li>
+  <li><a href="/login">Login</a></li>
+  <li><a href="/register">Register</a></li>
+  <li><a href="/logout">Logout</a></li>
+</ul>
 </div>
